# SpaceInvaders3D

SpaceInvaders3D/: CMakeLists.txt  auto.bat  auto.sh  conanfile.txt
SpaceInvaders3D/source/: main.cpp
SpaceInvaders3D/source/assets/: box1.mtl
SpaceInvaders3D/source/assets/Shaders/: CubeMapFragmentShader.txt  CubeMapVertexShader.txt  FragmentShader.txt  VertexShader.txt
SpaceInvaders3D/source/headers/: CubeMap.cpp  CubeMap.h  GameWorld.cpp  GameWorld.h  Includes.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Vector.h  Vertex.h
